# automatedapply-public-job-bot

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  gui.py  main.py  runtime_control.py
app/application/: __init__.py  autofill.py  form_utils.py  profile.py  runner.py  submit_policy.py
app/browser/: company_sites.py  form_detector.py  linkedin_login.py  linkedin_posts.py  session.py  web_search.py
app/classification/: __init__.py  claude_classifier.py  location_filter.py  profile_fit.py  remote_filter.py  rules.py  seniority_filter.py
app/extraction/: __init__.py  link_extractor.py  post_parser.py  salary_parser.py
app/integrations/: claude_cli.py
app/reputation/: __init__.py  glassdoor.py
app/resume/: __init__.py  inventory.py  tailoring.py
app/review/: __init__.py  human_review.py  job_links.py  report.py
data/: blacklist.template.yaml  candidate_profile.template.yaml  company_ratings.template.yaml  experience_inventory.template.yaml  sample_posts.template.json  target_sources.template.yaml
scripts/: build_exe.ps1  claude_classify.ps1  claude_review.ps1  claude_tailor_resume.ps1  run_apply.ps1  run_scan.ps1
tests/: test_apply_messages.py  test_browser_session.py  test_classification_rules.py  test_claude_cli.py  test_company_sources.py  test_db.py  test_form_detector.py  test_form_utils.py  test_glassdoor_rating_gate.py  test_job_links_export.py  test_link_extractor.py  test_linkedin_sources.py  test_profile_fit.py  test_resume_tailoring.py  test_runner.py  test_runtime_control.py  test_seniority_filter.py  test_web_search.py
(+10 files in other folders)
